--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Adarsh236/Pharmacy-Inventory-API-Dev"
+    "url": "https://github.com/Adarsh236/demo-rest-api.git"
   },
   "scripts": {
     "start": "npm run serve",
@@ -31,7 +31,6 @@
     "REST",
     "API"
   ],
-  "license": "ISC",
   "dependencies": {
     "@babel/runtime": "7.15.4",
     "@types/jest": "27.0.2",
@@ -64,11 +63,11 @@
     "eslint": "8.0.0",
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-config-google": "0.14.0",
-    "eslint-plugin-import": "2.24.2",
-    "eslint-plugin-sonarjs": "0.10.0",
     "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-import": "2.24.2",
     "eslint-plugin-jest": "25.0.1",
     "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-sonarjs": "0.10.0",
     "eslint-watch": "7.0.0",
     "jest": "27.2.5",
     "nodemon": "2.0.13",
